force-app/main/default/objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Payer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Used on ISM contract reports</description>
        <formula>Payer__r.Account_UID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Date__c</fullName>
        <label>Act Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appendix_Number_Copy__c</fullName>
        <description>Used in a workflow to fix the appendix number</description>
        <label>Appendix Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Bank_Details_Company_2__c,Xero_Key__r.Bank_Details_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Details Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Bank_Details_Local_Language_Company_2__c,Xero_Key__r.Bank_Details_Local_Language_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Details Local Language Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language__c</fullName>
        <label>Bank Details Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contains_Active_Enrolment_Fee_Line__c</fullName>
        <formula>AND ( Count_Active_Enrolment_Fee_Lines__c &gt; 0,  TEXT ( Voided_Deleted__c ) &lt;&gt; &quot;Voided&quot;, TEXT ( Voided_Deleted__c ) &lt;&gt; &quot;Deleted&quot;, Xero_Invoice_Status__c &lt;&gt; &quot;Voided&quot;, Xero_Invoice_Status__c &lt;&gt; &quot;Deleted&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contains Active Enrolment Fee Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contains_Yearly_Fee__c</fullName>
        <label>Contains Yearly Fee</label>
        <summaryFilterItems>
            <field>Line_Item__c.Yearly_Fee__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Appendix_Number__c</fullName>
        <formula>Payer__r.Contract_Number__c &amp;&quot;-&quot;&amp; TEXT(Appendix_Number_Copy__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract - Appendix Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date_Override__c</fullName>
        <label>Contract Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <formula>IF(TEXT(Contract_Date_Override__c) =&quot;&quot;,DATEVALUE(CreatedDate),
Contract_Date_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Payer__r.Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Family_Status__c</fullName>
        <formula>Payer__r.Family_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Family Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Total_Amount_Minus_Fees__c</fullName>
        <formula>IF(Total_Invoice_MINUS_bus_Fees__c &lt; 1000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 

IF(Total_Invoice_MINUS_bus_Fees__c &lt; 1000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 
3), 

IF(Total_Invoice_MINUS_bus_Fees__c &lt; 10000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_MINUS_bus_Fees__c), 2, 3)&amp;&quot;.&quot;&amp; 



RIGHT(TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 3), 



IF(Total_Invoice_MINUS_bus_Fees__c &lt; 100000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_MINUS_bus_Fees__c), 3, 3)&amp;&quot;.&quot;&amp; 



MID(text(Total_Invoice_MINUS_bus_Fees__c), 6, 3) 



, 





&quot;Error:Number Greater Than 999,999,999&quot;) ) 
))
&amp;&quot;,00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount in Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Active_Enrolment_Fee_Lines__c</fullName>
        <label>Count Active Enrolment Fee Lines</label>
        <summaryFilterItems>
            <field>Line_Item__c.Fee_Type__c</field>
            <operation>equals</operation>
            <value>Enrolment</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Campus_1_Line_Items__c</fullName>
        <label>Count Campus 1 Line Items</label>
        <summaryFilterItems>
            <field>Line_Item__c.Is_Campus_1_Student_Copy__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Campus_2_Line_Items__c</fullName>
        <label>Count Campus 2 Line Items</label>
        <summaryFilterItems>
            <field>Line_Item__c.Is_Campus_2_Student_Copy__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <formula>IF(OR( TEXT(Voided_Deleted__c)=&quot;Voided&quot;, TEXT(Voided_Deleted__c)=&quot;Deleted&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deleted?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_or_Includes_Application_Fee_DC__c</fullName>
        <formula>IF(OR( Deleted__c=&quot;Yes&quot;, Includes_Application_Fee_or_DC__c&gt;0),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deleted or Includes Application Fee/DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>School__c

/*AND(
    OR(
       School__c = &quot;Brasilia&quot;,
       Xero_Key__r.Name = &quot;Brasilia&quot;
       ),
    Invoice_Date__c = DATE(2017,01,01),
    Currency__c = &quot;BRL&quot;,
    OR(
       DATEVALUE(CreatedDate) = DATE(2016,12,11),
       DATEVALUE(CreatedDate) = DATE(2016,12,10)
       )
    )*/

/*AND(
    Owner_School__c = &quot;The International School of Moscow&quot;,
    Invoice_Date__c = DATE(2018,09,01)
    )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Copy__c</fullName>
        <description>Used for Workflow and fix the End Date copied from the Xero Keys Object</description>
        <label>End Date Copy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Override__c</fullName>
        <label>End Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF( TEXT(End_Date_Override__c) =&quot;&quot;,  End_Date_Copy__c  ,End_Date_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Copy__c</fullName>
        <description>Copy used in Workflow</description>
        <label>Exchange Rate Copy</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Date_Copy__c</fullName>
        <description>Used in a Worflow to copy and fix the Exchange Rate Date</description>
        <label>Exchange Rate Date Copy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Date_Override__c</fullName>
        <label>Exchange Rate Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Date__c</fullName>
        <formula>IF( TEXT(Exchange_Rate_Date_Override__c) =&quot;&quot;,  Exchange_Rate_Date_Copy__c ,Exchange_Rate_Date_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Formula__c</fullName>
        <formula>IF( Exchange_Rate_Override__c =0, Exchange_Rate_Copy__c ,Exchange_Rate_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Override__c</fullName>
        <label>Exchange Rate Override</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Date_of_Relevant_Term__c</fullName>
        <description>Identifies the start date of the term or year which the invoice applies to, based on the invoice date i.e.
01/08 to 14/12 = 01/08 
15/12 to 14/03 = 01/01
15/03 to 31/07 = 01/04</description>
        <formula>IF(
   OR(
      AND(
          MONTH(Invoice_Date__c)&gt;=8, 
          MONTH(Invoice_Date__c)&lt;=11
          ),
      AND(MONTH(Invoice_Date__c)=12,
          DAY(Invoice_Date__c)&lt;=14
          )
      ),
   DATE(YEAR(Invoice_Date__c), 8, 1),

IF(
   OR(
      AND(MONTH(Invoice_Date__c)&gt;=1,
          MONTH(Invoice_Date__c)&lt;=2
          ),
      AND(MONTH(Invoice_Date__c)=3,
          DAY(Invoice_Date__c)&lt;=14
          )
      ),
   DATE(YEAR(Invoice_Date__c), 1, 1),
 
IF(
   AND(
       MONTH(Invoice_Date__c)=12, 
       DAY(Invoice_Date__c)&gt;=15
       ),
   DATE(YEAR(Invoice_Date__c)+1, 1, 1),

IF(
   OR(
      AND(MONTH(Invoice_Date__c)&gt;=4,
          MONTH(Invoice_Date__c)&lt;=7
          ),
      AND(MONTH(Invoice_Date__c)=3,
          DAY(Invoice_Date__c)&gt;=15
          )
      ),
   DATE(YEAR(Invoice_Date__c), 4, 1)

   , null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Date of Relevant Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generated_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISM_Campus__c</fullName>
        <formula>IF( AND(Count_Campus_1_Line_Items__c&gt;0, Count_Campus_2_Line_Items__c=0),&quot;Krylatskaya&quot;,

IF( AND(Count_Campus_1_Line_Items__c=0, Count_Campus_2_Line_Items__c&gt;0),&quot;Rosinka&quot;,

IF( AND(Count_Campus_1_Line_Items__c&gt;0, Count_Campus_2_Line_Items__c&gt;0),&quot;Both&quot;,

&quot;Undefined&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISM_EAL_Text_Russian__c</fullName>
        <formula>IF(Include_EAL_Fee__c &gt;0,&quot;, включая- дополнительные занятия английским языком, если они необходимы.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM EAL Text Russian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISM_EAL_Text__c</fullName>
        <formula>IF(Include_EAL_Fee__c &gt;0,&quot;, including, if applicable, -EAL&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM EAL Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_EAL_Fee__c</fullName>
        <label>Include EAL Fee</label>
        <summaryFilterItems>
            <field>Line_Item__c.Description__c</field>
            <operation>contains</operation>
            <value>EAL</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Includes_Application_Fee_or_DC__c</fullName>
        <description>Created for Moscow for the Contract generation module</description>
        <label>Includes Application Fee or DC</label>
        <summaryFilterItems>
            <field>Line_Item__c.Application_Fee_or_DC__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>5/24/2014 5:00 PM</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Academic_Year_1__c</fullName>
        <formula>IF(AND(MONTH(Invoice_Date__c)&gt;7,MONTH(Invoice_Date__c)&lt;13), 

TEXT(YEAR( Invoice_Date__c )+1)&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR(Invoice_Date__c)+2),2) 

,TEXT(YEAR( Invoice_Date__c ))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR(Invoice_Date__c)+1),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Academic Year + 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Academic_Year__c</fullName>
        <formula>IF(AND(MONTH(Invoice_Date__c)&gt;7,MONTH(Invoice_Date__c)&lt;13),

TEXT(YEAR( Invoice_Date__c ))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR(Invoice_Date__c)+1),2)

,TEXT(YEAR( Invoice_Date__c )-1)&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR(Invoice_Date__c)),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Words_Russian__c</fullName>
        <formula>Text(Day( Invoice_Date__c ))&amp;&quot; &quot;&amp;

CASE( Month( Invoice_Date__c ) ,

1, &quot;Январь&quot;, 
2, &quot;Февраль&quot;, 
3, &quot;Март&quot;, 
4, &quot;Апрель&quot;, 
5, &quot;Май&quot;, 
6, &quot;Июнь&quot;, 
7, &quot;Июль&quot;, 
8, &quot;Август&quot;, 
9, &quot;Сентябрь&quot;, 
10, &quot;Октябрь&quot;, 
11, &quot;Ноябрь&quot;, 
12, &quot;Декабрь&quot;,
&quot;None&quot;)

&amp;
&quot; &quot;&amp;

Text(Year( Invoice_Date__c ))&amp;&quot; г.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Words Russian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Words__c</fullName>
        <formula>CASE( Month( Invoice_Date__c ) ,

1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)

&amp;
&quot; &quot;&amp;

Text(Day( Invoice_Date__c ))&amp;&quot;,&quot;&amp;&quot; &quot;&amp;

Text(Year( Invoice_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Words</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Export_Error__c</fullName>
        <label>Invoice Export Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Export_Fixed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Invoice Export Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Export_Id_Matches__c</fullName>
        <formula>Invoice_Export__r.Name = Xero_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Export Id Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Export__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Export</label>
        <referenceTo>Invoice_Export__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Filter__c</fullName>
        <description>Used in connector workbooks to filter what would normally be a very long list of invoices</description>
        <formula>AND(
    Invoice_Date__c = DATE(2017,03,15), 
    DATEVALUE(CreatedDate) = DATE(2017,02,10),
    School__c = &quot;New York&quot;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Legal_Address_Company_2__c ,Xero_Key__r.Legal_Address_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Local_Language_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Legal_Address_Local_Language_Company_2__c,Xero_Key__r.Legal_Address_Local_Language_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Address Local Language Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Local_Language__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>Legal Address Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Address__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>Legal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Local_Language__c</fullName>
        <formula>Payer__r.Legal_Rep_Local_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Rep Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Rep__c</fullName>
        <formula>Payer__r.Legal_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Xero_Contact__c</fullName>
        <description>Used in email templates to provide a link the relevant Xero contact for rectifying problems with duplicate/archived contacts when invoices are sent to Xero</description>
        <formula>&quot;https://go.xero.com/Contacts/View.aspx?contactID=&quot;&amp;Payer__r.Xero_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Xero Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Xero_Invoice__c</fullName>
        <formula>IF( Xero_Invoice_Status__c = &quot;Draft&quot;, HYPERLINK(&quot;https://go.xero.com/AccountsReceivable/Edit.aspx?InvoiceID=&quot;&amp; Xero_Id__c, &quot;Click Here&quot;), HYPERLINK(&quot;https://go.xero.com/AccountsReceivable/View.aspx?InvoiceID=&quot;&amp; Xero_Id__c, &quot;Click Here&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Xero Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;,  Xero_Key__r.Location_Address_Company_2__c  ,Xero_Key__r.Location_Address_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Local_Language_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Location_Address_Local_Language_Company2__c,Xero_Key__r.Location_Address_Local_Language_Company1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address Local Language Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Local_Language__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>Location Address Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_School__c</fullName>
        <formula>IF(Payer__r.RecordType.Name = &quot;Company&quot;, Payer__r.Company_School__c, Payer__r.SchoolText__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Address_Local_Language__c</fullName>
        <formula>Payer__r.Address_Local_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Address Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Bank_Details_Local_Language__c</fullName>
        <formula>Payer__r.Bank_Details_Local_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Bank Details Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Bank_Details__c</fullName>
        <formula>Payer__r.Bank_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Bank Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Email__c</fullName>
        <formula>Payer__r.Primary_Invoicing_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Main_Address__c</fullName>
        <formula>Payer__r.Main_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Main Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name_Local_Language__c</fullName>
        <formula>Payer__r.Primary_Invoicing_Contact_Name_in_L_Lang__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Name Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <formula>Payer__r.Primary_Invoicing_Contact_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Passport_ID_Number__c</fullName>
        <formula>Payer__r.Payer_Passport_ID_Number_Acc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Passport/ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Parent/Company</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoice_Statements1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Local_Language__c</fullName>
        <label>Reference Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Short__c</fullName>
        <label>Reference Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_Xero_Invoice_Date_Discrepancy__c</fullName>
        <formula>IF ( Invoice_Date__c &lt;&gt;  Xero_Invoice_Date__c, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF/Xero Invoice Date Discrepancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Xero_Invoice_Value_Discrepancy__c</fullName>
        <formula>IF ( Total_Invoice_Value__c &lt;&gt; Xero_Invoice_Value__c, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF/Xero Invoice Value Discrepancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Company_Contains_A__c</fullName>
        <formula>IF( CONTAINS(TEXT(Payer__r.School_Company__c),&quot;A&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Company Contains &quot;A&quot;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Company_Name_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Company_2_Name__c ,Xero_Key__r.Company_1_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Company Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Company_Name_Local_Language_Formu__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Company_2_Name_Local_Language__c ,Xero_Key__r.Company_1_Name_Local_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Company Name Local Language Formu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Company_Name_Local_Language_Short__c</fullName>
        <label>School Company Name Local Language Short</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Company_Name_Local_Language__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>School Company Name Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Company_Name_Short__c</fullName>
        <label>School Company Name Short</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Company_Name__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>School Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Legal_Rep_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Legal_Rep_Company_2__c,Xero_Key__r.Legal_Rep_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Legal Rep Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Legal_Rep_Local_Language_Formula__c</fullName>
        <formula>IF( TEXT(Payer__r.School_Company__c)=&quot;A002&quot;, Xero_Key__r.Legal_Rep_Local_Language_Company_2__c,Xero_Key__r.Legal_Rep_Local_Language_Company_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Legal Rep Local Language Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Legal_Rep_Local_Language__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>School Legal Rep Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Legal_Rep__c</fullName>
        <description>Used in a Workflow to ensure the field &quot;sticks&quot;.</description>
        <label>School Legal Rep</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Based_On__c</fullName>
        <formula>TEXT(Payer__r.Signing_Based_on__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signing Based On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Based_on_Local_Language__c</fullName>
        <formula>Payer__r.Signing_Based_on_Russian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signing Based on Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Copy__c</fullName>
        <description>Used for Workflow and fix the Start Date copied from the Xero Keys Object</description>
        <label>Start Date Copy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Override__c</fullName>
        <label>Start Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>IF( TEXT(Start_Date_Override__c) =&quot;&quot;,  Invoice_Date__c  ,Start_Date_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
</CustomObject>